--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(56, 56, 56, 0.87);
-  background-color: #f7e8d749;
+  color: rgba(47, 47, 47, 0.99);
+  background-color: #BFCFE7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,7 +14,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
 
+a {
+  text-decoration: none;
+  all: unset;
+}
 
 body {
   margin: 0;
@@ -31,7 +39,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px; ;
+  gap: 10px;
+  width: 100%;
 }
 
 
