--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,125 @@ body {
 
 
 
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: 20%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  border: 3px solid;
+  border-color: #FFF #FFF transparent transparent;
+  animation: rotation 1s linear infinite;
+  margin: auto;
+}
+.loader::after,
+.loader::before {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px solid;
+  border-color: transparent transparent #FF3D00 #FF3D00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotationBack 0.5s linear infinite;
+  transform-origin: center center;
+}
+.loader::before {
+  width: 32px;
+  height: 32px;
+  border-color: #FFF #FFF transparent transparent;
+  animation: rotation 1.5s linear infinite;
+}
+
+@media (max-width: 650px) {
+  .loader {
+    left: 43%;
+  }
+}
+
+
+.loader-container {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+.cards-container{
+  min-height: 120px;
+  width: 100%;
+  min-height: 100px;
+  padding: 10px 10px;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  gap: 8px; 
+  overflow-x: scroll;
+}
+
+
+.card-item-container{
+  height: 100%;
+  width: 140px;
+  min-width: 90px;
+  border: 1px solid blue;
+  padding: 8px;
+  border-radius: 4px;
+  background: rgb(48,37,240);
+  background: linear-gradient(0deg, rgba(48,37,240,1) 1%, rgba(19,19,168,1) 45%, rgba(6,3,79,1) 100%);
+}
+
+
+.cards-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.cards-container::-webkit-scrollbar
+{
+	width: 2px;
+	background-color: #F5F5F5;
+  border-radius: 8px;
+  height: 6px;
+}
+
+.cards-container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
+}
+    
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+
