--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ body {
   height: 100%;
   width: 140px;
   min-width: 90px;
+  min-height: 180px;
   border: 1px solid blue;
   padding: 8px;
   border-radius: 4px;
